--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My second github repo</title>
 </head>
 <body>
-    
+    <h1>I can put to github</h1>
+    <h2>I can code</h2>
+    <h3>code changes</h3>
 </body>
 </html>
