--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>I can put to github</h1>
     <h2>I can code</h2>
     <h3>code changes</h3>
+    <p>More paragraph</p>
+    <p>I am coding</p>
 </body>
 </html>
